--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@productboard/slate-edit-list": "^0.21.5",
-    "animejs": "^2.2.0",
+    "blobs": "^2.2.0",
     "classnames": "^2.2.6",
+    "d3-interpolate-path": "^2.2.3",
     "emoji-dictionary": "^1.0.11",
     "framer-motion": "^2.9.1",
+    "is-hotkey": "^0.2.0",
     "lodash": "^4.17.20",
     "luxon": "^1.21.3",
     "prop-types": "^15.6.2",
@@ -66,14 +68,12 @@
     "@storybook/testing-library": "^0.0.13",
     "autoprefixer": "^9.8.8",
     "babel-loader": "^8.1.0",
-    "blobs": "^2.2.0",
     "core-js": "^3.6.5",
-    "d3-interpolate-path": "^2.2.3",
     "enzyme": "^3.7.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
     "mkdirp": "^0.5.1",
