--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@productboard/slate-edit-list": "^0.21.5",
+    "@react-hook/resize-observer": "^1.2.6",
     "blobs": "^2.2.0",
     "classnames": "^2.2.6",
     "d3-interpolate-path": "^2.2.3",
@@ -32,7 +33,6 @@
     "prop-types": "^15.7.2",
     "react-compound-slider": "^3.3.1",
     "react-markdown": "^6.0.2",
-    "react-resize-aware": "^3.1.0",
     "react-table": "^7.7.0",
     "react-virtualized-auto-sizer": "^1.0.5",
     "react-window": "^1.8.6",
@@ -86,7 +86,6 @@
     "sass": "^1.56.1",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
-    "storybook-addon-sass-postcss": "^0.1.3",
-    "use-resize-observer": "^7.0.1"
+    "storybook-addon-sass-postcss": "^0.1.3"
   }
 }
