--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "@codaco/ui",
-  "version": "5.8.1",
+  "version": "6.0.0-alpha.2",
   "description": "Styles and React components for the Network Canvas project",
-  "main": "lib/components/index.js",
   "license": "GPL-3.0-or-later",
-  "engines": {
-    "node": "12.14.1",
-    "npm": "7.6.3"
-  },
+  "main": "lib/index.js",
+  "module": "lib/index.es.js",
   "repository": {
     "type": "git"
   },
   "scripts": {
+    "rollup": "rollup -c",
     "lint": "eslint ./src",
     "sass-lint": "sass-lint -vc .sass-lint.yml",
     "build": "./scripts/build",
@@ -21,14 +19,10 @@
     "build-storybook": "build-storybook -o docs-build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
     "@productboard/slate-edit-list": "^0.21.5",
-    "@storybook/theming": "^6.3.3",
     "animejs": "^2.2.0",
     "classnames": "^2.2.6",
     "emoji-dictionary": "^1.0.11",
-    "framer-motion": "^2.9.1",
     "lodash": "^4.17.20",
     "luxon": "^1.21.3",
     "prop-types": "^15.6.2",
@@ -51,23 +45,30 @@
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "framer-motion": "^2.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/eslint-plugin": "^7.13.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@storybook/addon-actions": "^6.3.3",
     "@storybook/addon-essentials": "^6.3.3",
     "@storybook/addon-links": "^6.3.3",
     "@storybook/addons": "^6.3.3",
     "@storybook/react": "^6.3.3",
-    "babel-loader": "^8.1.0",
-    "core-js": "^3.6.5",
+    "@storybook/theming": "^6.3.3",
+    "@svgr/rollup": "^6.5.1",
+    "@types/react": "^18.0.25",
+    "css-loader": "^6.7.2",
     "enzyme": "^3.7.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -75,12 +76,17 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
-    "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0",
+    "framer-motion": "^2.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rollup": "^3.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-scss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.56.1",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^10.4.1"
+    "sass-loader": "^10.2.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.9.3"
   }
 }
