--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "6.0.0-alpha.2",
   "description": "Styles and React components for the Network Canvas project",
   "license": "GPL-3.0-or-later",
-  "main": "lib/index.js",
-  "module": "lib/index.es.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "sideEffects": false,
   "repository": {
     "type": "git"
   },
@@ -19,6 +20,7 @@
     "build-storybook": "build-storybook -o docs-build"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.6",
     "@productboard/slate-edit-list": "^0.21.5",
     "animejs": "^2.2.0",
     "classnames": "^2.2.6",
@@ -52,12 +54,16 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
     "@storybook/addon-actions": "^6.3.3",
@@ -80,6 +86,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rollup": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-node-externals": "^5.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
