--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "6.0.0-alpha.2",
   "description": "Styles and React components for the Network Canvas project",
   "license": "GPL-3.0-or-later",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "main": "lib/index.js",
+  "module": "lib/index.es.js",
   "sideEffects": false,
   "repository": {
     "type": "git"
   },
   "scripts": {
-    "rollup": "rollup -c",
+    "rollup": "node --experimental-json-modules ./node_modules/.bin/rollup --config rollup.config.mjs",
     "lint": "eslint ./src",
     "sass-lint": "sass-lint -vc .sass-lint.yml",
     "build": "./scripts/build",
