--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "node --experimental-json-modules ./node_modules/.bin/rollup --config rollup.config.mjs",
     "lint": "eslint ./src",
     "sass-lint": "sass-lint -vc .sass-lint.yml",
-    "preflight": "npm run lint && npm run sass-lint",
+    "preflight": "npm run lint && npm run sass-lint -vc .sass-lint.yml",
     "prepublishOnly": "npm run preflight && npm run build",
     "storybook": "start-storybook -p 6006 --no-manager-cache",
     "build-storybook": "build-storybook -o docs-build"
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
