--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codaco/ui",
-  "version": "6.0.0-alpha.3",
+  "version": "6.0.0-alpha.4",
   "description": "Styles and React components for the Network Canvas project",
   "license": "GPL-3.0-or-later",
   "main": "lib/index.js",
@@ -20,6 +20,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
     "@productboard/slate-edit-list": "^0.21.5",
     "animejs": "^2.2.0",
     "classnames": "^2.2.6",
@@ -46,11 +50,9 @@
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "framer-motion": "^2.9.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "framer-motion": "^7.6.15",
+    "react": "^17.0.0 || ^18.2.0",
+    "react-dom": "^17.0.0 || ^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
@@ -59,8 +61,6 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-json": "^5.0.2",
@@ -84,9 +84,9 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
-    "framer-motion": "^2.9.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "framer-motion": "^7.6.15",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-node-externals": "^5.0.2",
