--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,8 @@ name: Publish package to GitHub Packages
 on:
   push
 jobs:
-  build:
+  publish:
+    needs: preflight
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -14,6 +15,6 @@ jobs:
         with:
           node-version: '18.12.1'
       - run: npm ci
-      - uses: codaco/npm-publish@v1
+      - uses: complexdatacollective/npm-publish@v1
         with:
           token: ${{ secrets.NPM_AUTH_TOKEN }}
