--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/parser": "^5.45.0",
+    "chromatic": "^6.11.4",
     "css-loader": "^6.7.2",
     "enzyme": "^3.7.0",
     "eslint": "^7.21.0",
