--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
+    "framer-motion": "^2.9.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "framer-motion": "^2.9.1"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
