--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
+    "framer-motion": "^2.9.1",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "react": "^16.13.1",
